--- a/src/app/todolist/todolist.html
+++ b/src/app/todolist/todolist.html
@@ -1,8 +1,11 @@
-<form action="" method="post">
-<label for="">{{ taskName }}</label>
-<input type="text">
-<label for="">{{ taskDescription }}</label>
-<input type="text">
-<label for="">{{ completedOrNot }}</label>
-<input type="checkbox">
-</form>
+<div class="todo-container">
+  <div class="todo-controls">
+    <button type="button" class="btn btn-add">
+      <span>Add</span>
+    </button>
+    <button type="button" class="btn btn-remove">
+      <span>Remove</span>
+    </button>
+  </div>
+  <app-list-item (taskAdded)="addTask($event)"/>
+</div>
